fixed spacing issues, but its still a bit jank not really happy with it

--- a/styles2.scss
+++ b/styles2.scss
@@ -307,10 +307,10 @@ body {
                 margin: 1em 0;
                 div {
                     display: grid;
-                    width: calc((((100vw - 4rem) / 3) - 4rem) / 5);
-                    height: calc((((100vw - 4rem) / 3) - 4rem) / 5);
-                    font-size: calc((((100vw - 4rem) / 3) - 4rem) / 5);
-                    line-height: calc((((100vw - 4rem) / 3) - 4rem) / 5);
+                    width: calc((((100vw - 4rem) / 3) - 4rem) / 4);
+                    height: calc((((100vw - 4rem) / 3) - 4rem) / 4);
+                    font-size: calc((((100vw - 4rem) / 3) - 4rem) / 4);
+                    line-height: calc((((100vw - 4rem) / 3) - 4rem) / 4);
                     border-radius: 1rem;
                     margin: 0.5rem;
                     &:hover {
@@ -332,7 +332,7 @@ body {
     }
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1150px) {
     body {
         grid-template-columns: 1fr;
     grid-template-areas:
